Whitespace fix

--- a/Responsive.css
+++ b/Responsive.css
@@ -37,35 +37,59 @@ h2 {
 }
 
 #main {
-    padding-bottom: 5%;
+    padding-top: 5%;
+    padding-bottom: 8%;
+    margin: auto;
+    border: solid 2px black;
+    text-align: center;
+    min-height: 63vh;
+}
+
+#tables {
+    padding-top: 5%;
+    padding-bottom: 8%;
 	margin: auto;
 	border: solid 2px black;
 	text-align: center;
+    min-height: calc(100vh - 450px);
  }
+
+#staff {
+    padding-top: 5%;
+    padding-bottom: 8%;
+    margin: auto;
+    border: solid 2px black;
+    text-align: center;
+    min-height: calc(100vh - 600px);
+}
+
+
 img.bildeMik {
     border: 0px;
     padding: 0px;
     width: 29%;
     height: 25%;
 }
+
 img.bildeFrugal {
     border: 0px;
     padding: 0px;
     width: 26%;
     height: 15%;
-
 }
 
 #footer {
 	background-color: #12232E;
-	height: 200px;
 	margin: auto;
 	border: solid 2px black;
 	text-align: center;
+    height: 190px;
+    padding-bottom: 2%;
 }
 .contact p{
     color: #ffff;
     background-color: #12232E;
+
 }
 
 
@@ -172,7 +196,6 @@ img{
     width:200px;
     color: #ffff;
     padding-left: 3%;
-
 
 }
 
